<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:id="@+id/stopEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_search_stop"
            android:importantForAutofill="no"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textColor="?attr/vibroTextPrimaryColor"
            android:textColorHint="?attr/vibroTextHintColor" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/stopClearButton"
                style="@style/Widget.ViBRoNavigator.InfoButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/action_clear_poi_search"
                android:src="@drawable/ic_close"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/stopVoiceButton"
                style="@style/Widget.ViBRoNavigator.InfoButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/action_voice_search_stop"
                android:src="@drawable/ic_mic" />
        </LinearLayout>
    </FrameLayout>

    <ImageButton
        android:id="@+id/stopMapButton"
        style="@style/Widget.ViBRoNavigator.IconButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/action_open_map"
        android:src="@drawable/ic_map_picker" />

    <ImageButton
        android:id="@+id/removeStopButton"
        style="@style/Widget.ViBRoNavigator.IconButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/action_remove_stop"
        android:src="@drawable/ic_close" />
</LinearLayout>
